# tiny-idp-rust

./: Cargo.toml  README.md
tiny-idp/: Cargo.toml
tiny-idp/src/: api.rs  main.rs  models.rs
tiny-idp/src/api/: error.rs  html.rs  introspect.rs  login.rs  redirect.rs  root.rs  token.rs
tiny-idp/src/models/: access_token.rs  auth_code.rs  client.rs  context.rs  user.rs
tiny-idp/templates/: login.html
tiny-rp/: Cargo.toml
tiny-rp/src/: index.rs  main.rs
tiny-rp/src/api/: error.rs  hello.rs  mod.rs  oidc.rs
tiny-rp/templates/: index.html
