[package]
name = "tiny-rp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
askama = "0.12.1"
axum = "0.7.5"
dioxus = "0.5.1"
dioxus-web = "0.5.1"
reqwest = { version = "0.12.3", features = ["json"] }
serde = "1.0.197"
serde_json = "1.0.115"
tokio = {version="1.37.0", features=["rt-multi-thread"]}
tracing-subscriber = {version="0.3.18", features=["env-filter"]}
# yew = "0.19.3"

#[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
[toolchain]
targets = ["wasm32-unknown-unknown"]
